--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -1,5 +1,5 @@
-@import "_mixin";
-@import "_fonts";
-@import "_variables";
-@import "_lending";
-@import "_mobile";
+@import "mixin";
+@import "fonts";
+@import "variables";
+@import "lending";
+@import "mobile";
