--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -143,13 +143,13 @@ header {
   overflow: hidden; }
   header .header-container {
     position: absolute;
-    text-align: center;
-    z-index: 2;
+    top: 6%;
     left: 50%;
-    top: 0;
-    -webkit-transform: translate(-50%, 0);
-        -ms-transform: translate(-50%, 0);
-            transform: translate(-50%, 0); }
+    text-align: center;
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    z-index: 2; }
     header .header-container a[href^="tel:"], header .header-container a[href^="mailto:"] {
       color: #fab31a; }
   header video {
@@ -160,19 +160,19 @@ header {
     z-index: 1; }
 
 .main .main-slogan-wrap {
+  /* width: 100%; */
   position: absolute;
-  display: block;
-  top: 27%;
-  z-index: 3;
-  -webkit-transform: translate(10%, 2%);
-      -ms-transform: translate(10%, 2%);
-          transform: translate(10%, 2%);
-  background-color: rgba(0, 0, 0, 0.6);
-  max-width: 1168px;
-  width: 100%;
+  top: 55%;
+  left: 50%;
   padding-top: 88px;
-  padding-left: 73px;
-  padding-bottom: 92px; }
+  padding-left: 70px;
+  padding-bottom: 92px;
+  background-color: rgba(0, 0, 0, 0.6);
+  max-width: 1133px;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 3; }
   .main .main-slogan-wrap .main-slogan {
     font-size: 37px;
     text-transform: uppercase;
@@ -778,32 +778,25 @@ header {
     * Adaptive style
 */
 @media (max-width: 1440px) {
-  .main .main-slogan-wrap {
-    -webkit-transform: translate(10%, 2%);
-        -ms-transform: translate(10%, 2%);
-            transform: translate(10%, 2%); }
   .possibilities-app .possibilities-app__item img {
     max-width: 400px; } }
 
-@media (max-width: 1366px) {
-  .slider-laptop .slider-laptop__items {
-    -webkit-transform: translate(0, -30%);
-        -ms-transform: translate(0, -30%);
-            transform: translate(0, -30%); } }
-
 @media (max-width: 1199px) {
+  .main .header .header-container {
+    top: 12%; }
+  .main .main-slogan-wrap {
+    background: none;
+    top: 50%; }
   .web-app-dev .web-app-dev__item {
     margin-right: 23px; }
   .block-form .block-form__form input[type="text"], .block-form .block-form__form input[type="email"], .block-form .block-form__form textarea {
     width: 365px; } }
 
-@media (max-width: 1160px) {
-  .slider-laptop .slider-laptop__items {
-    -webkit-transform: translate(0, -24%);
-        -ms-transform: translate(0, -24%);
-            transform: translate(0, -24%); } }
-
 @media (max-width: 991px) {
+  .main .main-slogan-wrap {
+    background: none;
+    top: 55%;
+    width: 100%; }
   .web-app-dev .web-app-dev__item {
     width: 100%;
     margin-right: auto; }
@@ -817,30 +810,11 @@ header {
       width: 50%; }
   .block-form .block-form__form input[type="text"], .block-form .block-form__form input[type="email"],
   .block-form .block-form__form input[type="submit"], .block-form .block-form__form textarea {
-    width: 100%; }
-  .slider-laptop .slider-1 {
-    margin: 0 auto;
-    max-width: 922px;
-    width: 100%;
-    max-height: 398px;
-    overflow: hidden;
-    margin-top: 8.8%;
-    border: none; }
-    .slider-laptop .slider-1 img {
-      padding: 0% 11.7% 0; }
-    .slider-laptop .slider-1 .flex-prev {
-      left: 11.5%; }
-    .slider-laptop .slider-1 .flex-next {
-      right: 11.5%; } }
+    width: 100%; } }
 
 @media (max-width: 830px) {
   header {
     height: auto; }
-  .main .main-slogan-wrap {
-    -webkit-transform: translate(0%, 50%);
-        -ms-transform: translate(0%, 50%);
-            transform: translate(0%, 50%);
-    padding-left: 5%; }
   .web-app-dev__plarform .web-app-dev__plarform--title {
     padding-top: 20px; }
   .web-app-dev__plarform .web-app-dev__plarformItems .web-app-dev__plarformItem {
@@ -932,14 +906,14 @@ header {
     background-size: cover;
     padding-left: 10px; } }
 
-@media (max-width: 750px) {
-  .slider-laptop .slider-1 {
-    margin-top: 3%; }
-  .slider-laptop .slider-laptop__items {
-    background-position: top center;
-    -webkit-transform: translate(0, 2%);
-        -ms-transform: translate(0, 2%);
-            transform: translate(0, 2%); } }
+@media (max-width: 767px) {
+  .main .header .header-container {
+    top: 18%; }
+  .main .main-slogan-wrap {
+    background: none;
+    top: 65%;
+    width: 100%;
+    padding-left: 0; } }
 
 @media (max-width: 700px) {
   .possibilities-app .possibilities-app__item img {
@@ -955,11 +929,8 @@ header {
     width: 100%; } }
 
 @media (max-width: 500px) {
-  .slider-laptop .slider-1 .flex-caption {
-    top: 0;
-    font-size: 13px; }
-  .slider-laptop .slider-laptop__items {
-    height: 300px; }
+  .main-slogan__top, .main-slogan__middle, .main-slogan__bottom {
+    text-align: center; }
   .partners-list__item img {
     display: block;
     max-width: 100%;
@@ -977,10 +948,6 @@ header {
     max-width: 156px; } }
 
 @media (max-width: 462px) {
-  .main .main-slogan-wrap {
-    -webkit-transform: translate(0%, 36%);
-        -ms-transform: translate(0%, 36%);
-            transform: translate(0%, 36%); }
   .main .btn {
     display: inline-block;
     padding: 11px 0;
@@ -993,17 +960,6 @@ header {
     padding-bottom: 70px; } }
 
 @media (max-width: 410px) {
-  header .header-container {
-    left: 0%;
-    -webkit-transform: translate(0%, 0);
-        -ms-transform: translate(0%, 0);
-            transform: translate(0%, 0);
-    width: 100%;
-    padding: 0; }
-  .header-logo, .main-nav, .header-logo img {
-    display: block;
-    width: 100%;
-    margin: auto; }
   .free-consultation {
     background-size: cover;
     padding-left: 0px;
