--- a/app/sass/_lending.scss
+++ b/app/sass/_lending.scss
@@ -141,11 +141,11 @@ header {
     overflow: hidden;
     .header-container {
         position: absolute;
-        text-align: center;
-        z-index: 2;
+        top: 6%;
         left: 50%;
-        top: 0;
-        transform: translate(-50%, 0);
+        text-align: center;
+        transform: translate(-50%, -50%);
+        z-index: 2;
         a[href^="tel:"], a[href^="mailto:"] {
             color: $clr_main2;
         }
@@ -161,18 +161,17 @@ header {
 
 .main {
     .main-slogan-wrap {
+        /* width: 100%; */
         position: absolute;
-        display: block;
-        top: 27%;
-        z-index: 3;
-        // transform: translate(46%, 50%);
-        transform: translate(10%, 2%);
-        background-color: rgba(0, 0, 0, 0.6);
-        max-width: 1168px;
-        width: 100%;
+        top: 55%;
+        left: 50%;
         padding-top: 88px;
-        padding-left: 73px;
+        padding-left: 70px;
         padding-bottom: 92px;
+        background-color: rgba(0, 0, 0, 0.6);
+        max-width: 1133px;
+        transform: translate(-50%, -50%);
+        z-index: 3;
         .main-slogan {
             font-size: 37px;
             text-transform: uppercase;
